--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="/vendor/stylesheets/tether.min.css" />
     <link rel="stylesheet" href="/vendor/stylesheets/bootstrap.min.css" />
     <link rel="stylesheet" href="/stylesheets/style.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 {{{body}}}
