made it mobile first

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,6 +1,6 @@
 body
   padding: 50px
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif
+  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif
 
 a
   color: #00B7FF
@@ -8,45 +8,51 @@ a
 *
   box-sizing: border-box
 
-.col-1 
-  width: 8.33%
-.col-2 
-  width: 16.66%
-.col-3 
-  width: 25%
-.col-4 
-  width: 33.33%
-.col-5 
-  width: 41.66%
-.col-6 
-  width: 50%
-.col-7 
-  width: 58.33%
-.col-8 
-  width: 66.66%
-.col-9 
-  width: 75%
-.col-10 
-  width: 83.33%
-.col-11 
-  width: 91.66%
-.col-12 
+/* For mobile phones: */
+[class*="col-"]
   width: 100%
 
+.btn-group>.btn:not(.dropdown-toggle)
+  border-radius: .25rem!important
+  margin-bottom: 0.5rem
+
+  
 [class*="col-"]
   float: left
 
-@media only screen and (max-width: 768px)
-  /* For mobile phones: */
-  [class*="col-"]
+@media only screen and (min-width: 768px)
+  .col-1
+    width: 8.33%
+  .col-2
+    width: 16.66%
+  .col-3
+    width: 25%
+  .col-4
+    width: 33.33%
+  .col-5
+    width: 41.66%
+  .col-6
+    width: 50%
+  .col-7
+    width: 58.33%
+  .col-8
+    width: 66.66%
+  .col-9
+    width: 75%
+  .col-10
+    width: 83.33%
+  .col-11
+    width: 91.66%
+  .col-12
     width: 100%
 
   .btn-group>.btn:not(.dropdown-toggle)
-    border-radius: .25rem!important
+    border-radius: .25rem
     margin-bottom: 0.5rem
 
+
 .myownrow
-  margin-bottom: 1rem;
+  margin-bottom: 1rem
 
 .myownrow::after
     content: ""
