--- a/views/index.hbs
+++ b/views/index.hbs
@@ -23,7 +23,7 @@
         <li>
             <p>
                 <span>{{this.due}}</span>
-                <span><a href="/notes/{{this.id}}" >{{this.title}}</a></span>
+                <span><a href="/notes/edit/{{this._id}}" >{{this.title}}</a></span>
                 <span>{{this.importance}}</span>
             </p>
             <div>
