notes are now updateable (they will remain in the db, maybe this is meant to be)

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -22,7 +22,7 @@
     {{#each notes}}
         <li>
             <p>
-                <span>{{this.due}}</span>
+                <span>{{this.dueDate}}</span>
                 <span><a href="/notes/edit/{{this._id}}" >{{this.title}}</a></span>
                 <span>{{this.importance}}</span>
             </p>
