Sorting and Filtering
Muss aber noch verbessert werden (die Interaktion ist sowas von sch***
aber ja...)

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head class="{{theme-dark}}">
     <title>{{title}}</title>
-    <link rel="stylesheet" href="/vendor/stylesheets/tether.min.css" />
-    <link rel="stylesheet" href="/vendor/stylesheets/bootstrap.min.css" />
+    <!--<link rel="stylesheet" href="/vendor/stylesheets/tether.min.css" />
+    <link rel="stylesheet" href="/vendor/stylesheets/bootstrap.min.css" />-->
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
