--- a/views/note.hbs
+++ b/views/note.hbs
@@ -23,7 +23,7 @@
     <input name="dueDate" type="date" id="InputNewNoteDateTime" value="{{note.dueDate}}">
     <br>
     <label>Done</label>
-    <input name="done" type="checkbox" id="InputNewNoteDone" value="Done!" {{#if note.done}}checked{{/if}}>
+    <input name="done" type="checkbox" id="InputNewNoteDone" value="true" {{#if note.done}}checked{{/if}}>
     <br>
     <label></label>
     <button class="btn btn-primary" id="BtnNewNoteSave" type="submit" value="Save">Save</button>
