--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,67 +1,76 @@
+$gray-dark:                 #373a3c !default
+$gray:                      #55595c !default
+$gray-light:                #818a91 !default
+$gray-lighter:              #eceeef !default
+$gray-lightest:             #f7f7f9 !default
+
+$brand-primary:             #0275d8 !default
+$brand-success:             #5cb85c !default
+$brand-info:                #5bc0de !default
+$brand-warning:             #f0ad4e !default
+$brand-danger:              #d9534f !default
+$brand-inverse:             $gray-dark !default
+
 body
   padding: 50px
   font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif
+  background-color: $gray-lightest
+
+  &.dark
+    background-color: $gray-dark
 
 a
-  color: #00B7FF
+  color: $brand-primary
+  text-decoration: none
 
 *
   box-sizing: border-box
 
-/* For mobile phones: */
-[class*="col-"]
-  width: 100%
-
-.btn-group>.btn:not(.dropdown-toggle)
-  border-radius: .25rem!important
-  margin-bottom: 0.5rem
-
-  
-[class*="col-"]
-  float: left
-
-@media only screen and (min-width: 768px)
-  .col-1
-    width: 8.33%
-  .col-2
-    width: 16.66%
-  .col-3
-    width: 25%
-  .col-4
-    width: 33.33%
-  .col-5
-    width: 41.66%
-  .col-6
-    width: 50%
-  .col-7
-    width: 58.33%
-  .col-8
-    width: 66.66%
-  .col-9
-    width: 75%
-  .col-10
-    width: 83.33%
-  .col-11
-    width: 91.66%
-  .col-12
-    width: 100%
-
-  .btn-group>.btn:not(.dropdown-toggle)
-    border-radius: .25rem
-    margin-bottom: 0.5rem
-
-
-.myownrow
+.container
+  display: flex
+  align-content: space-between
+  justify-content: space-between
+  flex-flow: row wrap
+  align-items: center
   margin-bottom: 1rem
 
-.myownrow::after
-    content: ""
-    clear: both
-    display: block
+.flex-start
+  align-items: flex-start
+
+.flex-end
+  align-items: flex-end
+
+.flex-fill
+  flex-grow: 1
 
 ul
   list-style: none
   padding: 0
 
-.todotitle
-  font-weight: bold
+li
+  background-color: $gray-lighter
+
+li:nth-child(2n)
+  background-color: $gray-light
+
+/* Basic Bootstrapish styles */
+.btn
+  display: inline-block
+  text-align: center
+  border: 1px solid transparent
+  padding: .5rem 1rem
+  font-size: 1rem
+  border-radius: .25rem
+
+.btn-primary
+  color: #fff
+  background-color: $brand-primary
+  border-color: $brand-primary
+  &:hover
+    color: #fff
+    background-color: darken($brand-primary, 10%)
+    border-color: darken($brand-primary, 10%)
+  .active
+    color: #fff
+    background-color: darken($brand-primary, 10%)
+    border-color: darken($brand-primary, 10%)
