chickfix show finished

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,7 +13,7 @@
         <a href="?order=create" class="btn btn-secondary {{buttons.create}}">By create Date</a>
         <a href="?order=importance" class="btn btn-secondary {{buttons.importance}}">By Importance</a>
     </div>
-    <a href="?show=all" class="btn btn-secondary {{buttonclass.filter}}">Show finished</a>
+    <a href="?show=all" class="btn btn-secondary {{buttons.filter}}">Show finished</a>
 </div>
 
 <ul>
