--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -119,3 +119,13 @@ li:nth-child(2n)
     background-color: #fff
     border-color: #66afe9
     outline: 0
+
+.rating
+  unicode-bidi: bidi-override
+  direction: rtl
+
+.rating > span
+  display: inline-block
+  position: relative
+  width: 1.1em
+
