--- a/views/index.hbs
+++ b/views/index.hbs
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                     <div class="container">
-                        <div><input type="checkbox" {{#if this.finishDate}}checked{{/if}} disabled><label for="finished">Finished&nbsp;</label></div>
+                        <div><input type="checkbox" {{#if this.done}}checked{{/if}} disabled><label for="finished">Finished&nbsp;</label></div>
                         <textarea class="flex-fill" disabled>{{this.description}}</textarea>
                     </div>
                 </div>
