added dark style

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -13,7 +13,7 @@
         <a href="?show={{buttons.show}}&order=create{{#if buttons.direction}}{{else}}&direction=desc{{/if}}" class="btn btn-secondary {{buttons.create}}">By create Date</a>
         <a href="?show={{buttons.show}}&order=importance{{#if buttons.direction}}{{else}}&direction=desc{{/if}}" class="btn btn-secondary {{buttons.importance}}">By Importance</a>
     </div>
-    <a href="?show={{buttons.showBtnState}}" class="btn btn-secondary {{buttons.filter}}">Show finished</a>
+    <a href="?show={{buttons.showBtnState}}" class="btn btn-secondary {{buttons.filter.class}}">Show finished</a>
 </div>
 
 <ul>
