--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -1,131 +1,2 @@
-$gray-dark:                 #373a3c !default
-$gray:                      #55595c !default
-$gray-light:                #818a91 !default
-$gray-lighter:              #eceeef !default
-$gray-lightest:             #f7f7f9 !default
-
-$brand-primary:             #0275d8 !default
-$brand-success:             #5cb85c !default
-$brand-info:                #5bc0de !default
-$brand-warning:             #f0ad4e !default
-$brand-danger:              #d9534f !default
-$brand-inverse:             $gray-dark !default
-
-body
-  padding: 50px
-  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif
-
-  &.dark
-    background-color: $gray-dark
-
-a
-  color: $brand-primary
-  text-decoration: none
-
-*
-  box-sizing: border-box
-
-.container
-  display: flex
-  align-content: space-between
-  justify-content: space-between
-  flex-flow: row wrap
-  align-items: center
-  margin-bottom: 1rem
-
-.flex-start
-  align-items: flex-start
-
-.flex-end
-  align-items: flex-end
-
-.flex-fill
-  flex-grow: 1
-
-ul
-  list-style: none
-  padding: 0
-
-li
-  background-color: $gray-lighter
-
-li:nth-child(2n)
-  background-color: $gray-light
-
-/* Basic Bootstrapish styles */
-.btn
-  display: inline-block
-  text-align: center
-  border: 1px solid transparent
-  padding: .5rem 1rem
-  font-size: 1rem
-  border-radius: .25rem
-  &.active
-    box-shadow: inset 0px 3px 17px darkgray
-
-
-.btn-secondary
-  color: $gray-dark
-  background-color: $gray-lighter
-  border-color: $gray-light
-  &:hover
-    color: $gray-dark
-    background-color: darken($gray-lighter, 25%) !important
-    border-color: darken($gray-light, 30%)
-  &.active
-    color: $gray-dark
-    background-color: darken($gray-lighter, 17%)
-    border-color: darken($gray-light, 25%)
-
-.btn-primary
-  color: #fff
-  background-color: $brand-primary
-  border-color: $brand-primary
-  &:hover
-    color: #fff
-    background-color: darken($brand-primary, 20%)
-    border-color: darken($brand-primary, 30%)
-  &.active
-    color: #fff
-    background-color: darken($brand-primary, 17%)
-    border-color: darken($brand-primary, 25%)
-
-.alert
-  padding: 1rem
-  margin-bottom: 1rem
-  border: 1px solid transparent
-  border-radius: .25rem
-
-.alert-info
-  background-color: #d9edf7
-  border-color: #bcdff1
-  color: #31708f
-
-.form-control
-  display: block
-  width: 100%
-  padding: .5rem .75rem
-  font-size: 1rem
-  line-height: 1.25
-  color: #55595c
-  background-color: #fff
-  background-image: none
-  -webkit-background-clip: padding-box
-  background-clip: padding-box
-  border: 1px solid rgba(0,0,0,.15)
-  border-radius: .25rem
-  &:focus
-    color: #55595c
-    background-color: #fff
-    border-color: #66afe9
-    outline: 0
-
-.rating
-  unicode-bidi: bidi-override
-  direction: rtl
-
-.rating > span
-  display: inline-block
-  position: relative
-  width: 1.1em
-
+@import "colors/default"
+@import "base"
