--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,18 +1,13 @@
 <!DOCTYPE html>
 <html>
-<head class="{{theme-dark}}">
+<head>
     <title>{{title}}</title>
     <!--<link rel="stylesheet" href="/vendor/stylesheets/tether.min.css" />
     <link rel="stylesheet" href="/vendor/stylesheets/bootstrap.min.css" />-->
-    <link rel="stylesheet" href="/stylesheets/style.css" />
+    <link rel="stylesheet" href="/stylesheets/style{{theme}}.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 {{{body}}}
-<!--
-<script src="/vendor/javascripts/jquery.min.js"></script>
-<script src="/vendor/javascripts/tether.min.js"></script>
-<script src="/vendor/javascripts/bootstrap.min.js"></script>
--->
 </body>
 </html>
