--- a/public/stylesheets/_base.sass
+++ b/public/stylesheets/_base.sass
@@ -118,6 +118,15 @@ li:nth-child(2n)
   position: relative
   width: 1.1em
 
-.rating2
+
+.asc
   &:before
-    content: "\2605\2605"
+    content: "\25B2"
+
+.desc
+  &:before
+    content: "\25BC"
+
+.active
+  &:before
+    content: "\2713"
