--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,19 +1,19 @@
 <div class="container">
     <div>
-        <a href="/notes/new" class="btn btn-primary">Create new Note</a>
+        <a href="/notes/new?{{buttons.theme.current_href}}" class="btn btn-primary">Create new Note</a>
     </div>
     <div>
-        <a href="/?theme={{othertheme}}{{params}}" class="btn btn-secondary">Style switcher</a>
+        <a href="/?{{buttons.filter.current_href}}{{buttons.sorting_href}}{{buttons.theme.href}}" class="btn btn-secondary {{buttons.theme.class}}">Style switcher</a>
     </div>
 </div>
 <div class="container">
 
     <div data-toggle="buttons">
-        <a href="?show={{buttons.show}}&order=finish{{#if buttons.direction}}{{else}}&direction=desc{{/if}}" class="btn btn-secondary {{buttons.finish}}">By finish Date</a>
-        <a href="?show={{buttons.show}}&order=create{{#if buttons.direction}}{{else}}&direction=desc{{/if}}" class="btn btn-secondary {{buttons.create}}">By create Date</a>
-        <a href="?show={{buttons.show}}&order=importance{{#if buttons.direction}}{{else}}&direction=desc{{/if}}" class="btn btn-secondary {{buttons.importance}}">By Importance</a>
+        <a href="/?{{buttons.filter.current_href}}{{buttons.finish.href}}{{buttons.theme.current_href}}" class="btn btn-secondary {{buttons.finish.class}}">By finish Date</a>
+        <a href="/?{{buttons.filter.current_href}}{{buttons.create.href}}{{buttons.theme.current_href}}" class="btn btn-secondary {{buttons.create.class}}">By create Date</a>
+        <a href="/?{{buttons.filter.current_href}}{{buttons.importance.href}}{{buttons.theme.current_href}}" class="btn btn-secondary {{buttons.importance.class}}">By Importance</a>
     </div>
-    <a href="?show={{buttons.showBtnState}}" class="btn btn-secondary {{buttons.filter.class}}">Show finished</a>
+    <a href="/?{{buttons.filter.href}}{{buttons.sorting_href}}{{buttons.theme.current_href}}" class="btn btn-secondary {{buttons.filter.class}}">Show finished</a>
 </div>
 
 <ul>
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div>
-                    <a href="/notes/edit/{{this._id}}" class="btn btn-primary">Edit</a>
+                    <a href="/notes/edit/{{this._id}}?{{buttons.theme.current_href}}" class="btn btn-primary">Edit</a>
                 </div>
             </div>
         </li>
