need to ad the theme to the set of notes, because within the each loop of handlebars it is not possible to access other variables given to the hbs template.

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -42,7 +42,7 @@
                     </div>
                 </div>
                 <div>
-                    <a href="/notes/edit/{{this._id}}?{{buttons.theme.current_href}}" class="btn btn-primary">Edit</a>
+                    <a href="/notes/edit/{{this._id}}{{#if this.theme}}?theme={{this.theme}}{{/if}}" class="btn btn-primary">Edit</a>
                 </div>
             </div>
         </li>
