--- a/public/stylesheets/_base.sass
+++ b/public/stylesheets/_base.sass
@@ -17,7 +17,6 @@ a
   justify-content: space-between
   flex-flow: row wrap
   align-items: center
-  margin-bottom: 1rem
 
 .flex-start
   align-items: flex-start
@@ -27,6 +26,7 @@ a
 
 .flex-fill
   flex-grow: 1
+  margin-right: 0.2rem
 
 ul
   list-style: none
@@ -34,7 +34,7 @@ ul
 
 li
   background-color: $list
-  padding: 1.5rem
+  padding: 0.5rem
   border: 1px solid $list-border
   margin-bottom: 1rem
 
@@ -47,6 +47,7 @@ li:nth-child(2n)
   text-align: center
   border: 1px solid transparent
   padding: .5rem 1rem
+  margin-top: 1rem
   font-size: 1rem
   border-radius: .25rem
   &.active
@@ -126,3 +127,19 @@ li:nth-child(2n)
 .desc
   &:before
     content: "\25BC"
+
+@media (max-width: 700px)
+  body
+    min-width: 400px
+
+  body > .container:nth-child(2)
+    flex-flow: column
+    align-items: stretch
+
+  body > .container:first-child
+    flex-flow: row
+
+  .btn
+    display: block
+    width: 100%
+
