--- a/public/stylesheets/_base.sass
+++ b/public/stylesheets/_base.sass
@@ -50,6 +50,7 @@ li:nth-child(2n)
   margin-top: 1rem
   font-size: 1rem
   border-radius: .25rem
+  cursor: pointer
   &.active
     box-shadow: inset 0px 3px 17px darkgray
 
