--- a/public/stylesheets/_base.sass
+++ b/public/stylesheets/_base.sass
@@ -131,7 +131,8 @@ li:nth-child(2n)
 
 @media (max-width: 700px)
   body
-    min-width: 400px
+    min-width: 300px
+    padding: 0
 
   body > .container:nth-child(2)
     flex-flow: column
